# pyedid

./: MANIFEST.in  Makefile  setup.cfg  setup.py  tox.ini
pyedid/helpers/: edid_helper.py
src/python_edid/: __init__.py  edid.py  main.py
src/python_edid/helpers/: edid_helper.py
tests/: data.py  test_edid.py  test_edid_helpers.py  test_registry.py
tests/data_files/: card0-HDMI-A-1.edid
