[bumpversion]
current_version = 0.0.3
commit = True
tag = True

[metadata]
author = Didier Bröska
author_email = didier.broska@gmail.com
name = python-edid
keyword = linux, monitor, edid, display
description = Tools to parse edid informations from SYSFS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Sofware Development :: Libraries
	Topic :: System :: Hardware
url = https://github.com/didierbroska/python-edid

[options]
zip_safe = False
package_dir =
	=src
packages = find:
python_requires = >=3.5.0
setup_requires =
	setuptools>=39.2.0
	setuptools_scm
	pytest-runner
test_requires =
	pytest
	pytest-cov
	pytest-mock

[options.packages.find]
where = src

[options.extras_require]
tests = 
	pytest
	pytest-runner
	pytest-cov
	pytest-mock

dev =
	%(tests)s
	bumpversion==0.6.0
	black==19.10b0
	flake8==3.8.3
	tox==3.5.2
	tox-pyenv==1.1.0
	coverage==4.5.1
	twine==1.13.0
	readme-renderer[md]==24.0
	wheel

[options.entry_points]
console_scripts =
	py-edid-parser = python_edid.main:main

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
source = src/python_edid
omit = tests/*

[coverage:report]
exclude_lines =
	pragma: no cover
	raise AssertionError
	raise NotImplementedError
	if __name__ == '__main__':

[flake8]
exclude = .git,__oycache__,docs/*,build,dist,.tox

[tool:pytest]
addopts = -v -x --cov=src/python_edid --cov-config=setup.cfg --cov-report=term --cov-report=html

[aliases]
test = pytest

[tools:pytest]
collect_ignore = ['setup.py']

[bumpversion:file.setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:python-edid/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
